--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -11,5 +11,9 @@
     <li class="nav-item">
     <a class="nav-link" href="/results">Results</a>
   </li>
+    </li>
+    <li class="nav-item">
+    <a class="nav-link" href="/auth">Auth</a>
+  </li>
 
 </ul>
